Fix for TUSCANY-712
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sdo@441495 13f79535-47bb-0310-9956-ffa450edef68